--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -4,6 +4,19 @@
   },
   "pages": {
     "home": {
+      "heading-1": "Heading1",
+      "heading-2": "Heading2",
+      "heading-3": "Heading3",
+      "heading-4": "Heading4",
+      "heading-5": "Heading5",
+      "paragraph": "Paragraph",
+      "link": "Link",
+      "internal-link": "Internal Link",
+      "bold": "Bold",
+      "italic": "Italic",
+      "underline": "Underline",
+      "code": "Code",
+      "animated-svg": "Animated SVG",
       "description": "Text in English"
     },
     "not-found": {
@@ -18,7 +31,7 @@
         "title": "Header"
       },
       "footer": {
-        "title": "Header"
+        "title": "Footer"
       }
     }
   },
