--- a/src/locales/lt/index.json
+++ b/src/locales/lt/index.json
@@ -12,6 +12,7 @@
       "paragraph": "Pastraipa",
       "link": "Nuoroda",
       "internal-link": "Vidinė nuoroda",
+      "markdown-article-link": "Markdown straipsnio nuoroda",
       "bold": "Paryškinimas",
       "italic": "Kursyvas",
       "underline": "Pabraukimas",
