Fix markdown multi locale generation

--- a/src/locales/lt/index.json
+++ b/src/locales/lt/index.json
@@ -9,6 +9,7 @@
       "heading-3": "Antraštė3",
       "heading-4": "Antraštė4",
       "heading-5": "Antraštė5",
+      "heading-6": "Antraštė6",
       "paragraph": "Pastraipa",
       "link": "Nuoroda",
       "internal-link": "Vidinė nuoroda",
