--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -9,6 +9,7 @@
       "heading-3": "Heading3",
       "heading-4": "Heading4",
       "heading-5": "Heading5",
+      "heading-6": "Heading6",
       "paragraph": "Paragraph",
       "link": "Link",
       "internal-link": "Internal Link",
