Add brand component

--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -33,7 +33,7 @@
         "title": "Header"
       },
       "footer": {
-        "title": "Footer"
+        "title": "© {{year}} {{name}}"
       }
     }
   },
