--- a/src/locales/lt/index.json
+++ b/src/locales/lt/index.json
@@ -33,7 +33,7 @@
         "title": "Antraštė"
       },
       "footer": {
-        "title": "Poraštė"
+        "title": "© {{year}} {{name}}"
       }
     }
   },
